# Inkscape-MacOS-Curated-Build

./: .appveyor.yml  .gitignore  .snapcraft.yaml  CMakeLists.txt  Info.plist.in  NEWS  README.fr.txt  README.md  TRANSLATORS  build-x64-gtk3.xml  build-x64.xml  build.xml  buildtool.cpp  config.h.cmake  configure.ac  inkscape.de.pod  inkscape.desktop.template  inkscape.el.pod  inkscape.fr.pod  inkscape.ja.pod  inkscape.pod  inkscape.sk.pod  inkscape.zh_TW.pod  mingwenv.bat  mingwenv.cmake
CMakeScripts/: ConfigEnv.cmake  ConfigPaths.cmake  DefineDependsandFlags.cmake  Dist.cmake  HelperFunctions.cmake  HelperMacros.cmake  Install.cmake  InstallMSYS2.cmake  inkscape-desktop.cmake  inkscape-version.cmake
CMakeScripts/Modules/: FindSigC++.cmake
buildtools/: appveyor.sh  msys2checkdeps.py  msys2installdeps.sh
doc/: keys.README  keys.be.html  keys.css  keys.de.html  keys.el.html  keys.en.html  keys.fr.html  keys.html  keys.ja.html  keys.zh_TW.html
man/: inkscape.de.pod.in  inkscape.el.pod.in  inkscape.fr.pod.in  inkscape.ja.pod.in  inkscape.pod.in  inkscape.sk.pod.in  inkscape.zh_TW.pod.in
packaging/: mkNEWS
packaging/macosx/: README.txt  osx-app.sh  osx-build.sh  osx-dmg.sh
packaging/macosx/ScriptExec/: launcher-quartz-no-macintegration.sh
packaging/macosx/app_patches/: fix-GIMP-sliders-in-Inkscape-app-v3.patch  fix-URL-links-in-Inkscape-app-v1.patch  fix-borderless-menus-in-Inkscape-app-v1.patch  fix-cropped-button-images-in-Inkscape-app-v1.patch
packaging/snappy/: snapcraft.sh  version.sh
packaging/win32/languages/: Breton.nsh  Breton_languageNames.nsh  Catalan.nsh  Catalan_languageNames.nsh  Czech.nsh  Czech_languageNames.nsh  Danish.nsh  Danish_languageNames.nsh  Dutch.nsh  Dutch_languageNames.nsh  English.nsh  English_languageNames.nsh  Finnish.nsh  Finnish_languageNames.nsh  French.nsh  French_languageNames.nsh  Galician.nsh  Galician_languageNames.nsh  German.nsh  German_languageNames.nsh  Greek.nsh  Greek_languageNames.nsh  Hebrew.nsh  Hebrew_languageNames.nsh  Icelandic.nsh  Icelandic_languageNames.nsh  Indonesian.nsh  (+32 more)
packaging/wix/: files.py  helpers.py  inkscape.wxs  version.py
po/: CMakeLists.txt  POTFILES.in  am.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_BD.po  br.po  brx.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  doi.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US@piglatin.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  (+53 more)
setup/gui/: inkscape.desktop
share/branding/: CMakeLists.txt  Makefile.am
share/examples/: car.svgz  gallardo.svgz  stars.svgz
share/extensions/: draw_from_triangle.py  dxf_outlines.py  extrude.py  gcodetools.py  gcodetools_about.inx  gcodetools_area.inx  gcodetools_check_for_updates.inx  gcodetools_dxf_points.inx  gcodetools_engraving.inx  gcodetools_graffiti.inx  gcodetools_lathe.inx  gcodetools_orientation_points.inx  gcodetools_path_to_gcode.inx  gcodetools_prepare_path_for_plasma.inx  gcodetools_tools_library.inx  grid_cartesian.inx  grid_cartesian.py  grid_polar.inx  grid_polar.py  hpgl_input.py  hpgl_output.py  inkscape_help_manual.inx  jessyInk.js  measure.py  perspective.py  plotter.py  polyhedron_3d.py  print_win32_vector.py  run_command.py  scour.inkscape.py  svg2xaml.xsl  uniconv-ext.py  uniconv_output.py
share/filters/: CMakeLists.txt
share/keys/: default.xml
share/palettes/: CMakeLists.txt
share/patterns/: CMakeLists.txt
share/symbols/: CMakeLists.txt
share/templates/: CMakeLists.txt
share/tutorials/: Makefile.am  README
src/: CMakeLists.txt  Makefile.am  Makefile_insert  attributes.cpp  color-profile.cpp  desktop-events.cpp  desktop-style.cpp  desktop.cpp  document.cpp  document.h  file-update.cpp  file.cpp  file.h  gradient-chemistry.cpp  gradient-drag.cpp  gradient-drag.h  id-clash.cpp  inkscape-manifest.xml  inkscape-version.cpp.in  inkscape.cpp  inkscape.rc  inkview.cpp  knot.cpp  knot.h  main.cpp  menus-skeleton.h  path-chemistry.cpp  resource-manager.cpp  selection-chemistry.cpp  selection-chemistry.h  seltrans.cpp  shortcuts.cpp  shortcuts.h  sp-cursor.cpp  sp-ellipse.cpp  sp-ellipse.h  sp-factory.cpp  sp-gradient.cpp  sp-image.cpp  sp-item-group.cpp  (+24 more)
src/display/: cairo-utils.cpp  canvas-grid.cpp  drawing-image.cpp  nr-filter-composite.cpp  nr-filter-merge.cpp  nr-filter-tile.cpp  snap-indicator.cpp  sp-canvas.cpp
src/extension/: extension.cpp
src/filters/: blend.cpp  composite.cpp
src/helper/: window.cpp
src/inkgc/: gc-core.h  gc-managed.h  gc.cpp
src/io/: sys.cpp
src/libavoid/: connector.cpp
src/libnrtype/: FontFactory.cpp  Layout-TNG-Compute.cpp  Layout-TNG-Scanline-Makers.cpp  Layout-TNG.h  font-lister.cpp
src/libuemf/: uwmf.c  uwmf.h
src/live_effects/: effect.cpp  effect.h  lpe-bendpath.cpp  lpe-bounding-box.cpp  lpe-bspline.cpp  lpe-clone-original.cpp  lpe-copy_rotate.cpp  lpe-fill-between-many.cpp  lpe-fill-between-many.h  lpe-fillet-chamfer.cpp  lpe-gears.cpp  lpe-knot.cpp  lpe-lattice2.cpp  lpe-mirror_symmetry.cpp  lpe-path_length.cpp  lpe-patternalongpath.cpp  lpe-perspective-envelope.cpp  lpe-perspective_path.cpp  lpe-perspective_path.h  lpe-powerstroke.cpp  lpe-roughen.cpp  lpe-ruler.cpp  lpe-show_handles.cpp  lpe-show_handles.h  lpe-simplify.cpp  lpe-transform_2pts.cpp
src/osx_carbon_integration/: Makefile_insert  osx-glue.h  osx-glue.m  osx-integration.cpp  osx-integration.h
src/svg/: svg-affine.cpp
src/ui/: clipboard.cpp  control-manager.cpp  dialog-events.cpp  object-edit.cpp  uxmanager.cpp
src/widgets/: arc-toolbar.cpp  dash-selector.cpp  desktop-widget.cpp  desktop-widget.h  fill-style.cpp  gradient-selector.h  measure-toolbar.cpp  mesh-toolbar.cpp  paint-selector.cpp  paint-selector.h  paintbucket-toolbar.cpp  pencil-toolbar.cpp  spinbutton-events.cpp  stroke-marker-selector.cpp  text-toolbar.cpp  toolbox.cpp
src/xml/: rebase-hrefs.cpp  repr-io.cpp
testfiles/: CMakeLists.txt
valerio-build/: Inkscape  build-0.92.2  build-0.92.3  create-dmg  gen_keepers
valerio-patches/: Inkscape-MacOS-Curated-Build-0.92.2.patch  gtk+-2.24.31.inkscape-pasteboard.patch
(+120 files in other folders)
